# OpenCLDemo

./: CMakeLists.txt  CUDA_vs_OpenCL.pptx  OpenCL开发环境配置.docx  README.md  helloworld.cl  helloworld.cpp  main.cpp
kernel_test(培训)/: kernel测试说明.pptx  测试规则.md
kernel_test(培训)/addone_cuda/: addone_cuda.cu.cc  readme.md
kernel_test(培训)/addone_opencl/: addone_opencl.cc  readme.md
kernel_test(培训)/addone_test/: 2020-06-12_09-11-41-result.html  HTMLTestRunner.py  kernel_test.py  readme.md
kernel_test(培训)/附件/: readme.md
